Fixed overflow in model zoo dropdown

--- a/ide/static/css/style.css
+++ b/ide/static/css/style.css
@@ -528,6 +528,7 @@ button.close {
     margin-top: 0;
     max-height: 500px;
     min-width: 30px;
+    overflow: auto;
     background-color: #455062;
 }
 
@@ -655,6 +656,22 @@ input[type="file"] {
 }
 
 .setparamsActive::-webkit-scrollbar-thumb
+{
+  background-color: #cdcfd2;
+}
+
+.dropdown-menu::-webkit-scrollbar-track
+{
+  background-color: #F5F5F5;
+}
+
+.dropdown-menu::-webkit-scrollbar
+{
+  width: 12px;
+  background-color: #F5F5F5;
+}
+
+.dropdown-menu::-webkit-scrollbar-thumb
 {
   background-color: #cdcfd2;
 }
